# community-detection

./: CMakeLists.txt  README.md
data/: coords.txt  football.graphml  results.graphml
python/: plot.py
src/: Algo.cpp  Algo.h  InputGraph.cpp  InputGraph.h  MyEdge.h  MyGraph.cpp  MyGraph.h  main.cpp
